turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:50: error: not found: value posX
  while (posX != 8) {
         ^Turmite:51: error: not found: value posX
    if (posX > 8) {
        ^Turmite:60: error: not found: value posX
    posX = getX()
    ^Turmite:62: error: not found: value posY
  while (posY != 33) {
         ^Turmite:63: error: not found: value posY
    if (posY > 33) {
        ^Turmite:70: error: not found: value posY
    posY = getY()
    ^